# lab05

./: CMakeList.txt  CMakeLists.txt
.github/workflows/: cmake.yml
gtest/: tests.cpp
